export const snapshot = {};

snapshot[`tests > cli > bare 1`] = `
"
👤 test-handle 🎖️ 42            
🚀 rust             0 exercises
🚀 typescript       0 exercises
"
`;

snapshot[`tests > cli > bare 2`] = `[]`;

snapshot[`tests > cli > --quiet 1`] = `
"

"
`;

snapshot[`tests > cli > --quiet 2`] = `[]`;

snapshot[`tests > cli > --verbose 1`] = `
"

👤 test-handle 🎖️ 42            
🚀 rust             0 exercises
🚀 typescript       0 exercises"
`;

snapshot[`tests > cli > --verbose 2`] = `[]`;

snapshot[`tests > cli > --json 1`] = `
'
{
  "profile": {},
  "tracks": [
    {
      "slug": "python",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/python.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": false,
      "has_notifications": false
    },
    {
      "slug": "rust",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/rust.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    },
    {
      "slug": "typescript",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/typescript.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    }
  ]
}
'
`;

snapshot[`tests > cli > --json 2`] = `[]`;

snapshot[`tests > cli > --json 3`] = `
'
{
  "profile": {}
}
'
`;

snapshot[`tests > cli > --json 4`] = `[]`;

snapshot[`tests > cli > --json 5`] = `
'
{
  "tracks": [
    {
      "slug": "rust",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/rust.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false,
      "exercises": [
        {
          "slug": "bob",
          "title": "Bob",
          "difficulty": "easy",
          "blurb": "Exercise bob on Exercism.",
          "is_unlocked": true,
          "is_recommended": false
        }
      ]
    },
    {
      "slug": "typescript",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/typescript.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false,
      "exercises": [
        {
          "slug": "bob",
          "title": "Bob",
          "difficulty": "easy",
          "blurb": "Exercise bob on Exercism.",
          "is_unlocked": true,
          "is_recommended": false
        }
      ]
    }
  ]
}
'
`;

snapshot[`tests > cli > --json 6`] = `[]`;

snapshot[`tests > cli > --json 7`] = `
'
{
  "tracks": [
    {
      "slug": "python",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/python.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": false,
      "has_notifications": false
    },
    {
      "slug": "rust",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/rust.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    },
    {
      "slug": "typescript",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/typescript.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    }
  ]
}
'
`;

snapshot[`tests > cli > --json 8`] = `[]`;

snapshot[`tests > cli > --json 9`] = `
'
{
  "track": {
    "slug": "typescript",
    "course": true,
    "icon_url": "https://assets.exercism.org/tracks/typescript.svg",
    "tags": [
      "Windows",
      "macOS",
      "Linux"
    ],
    "last_touched_at": "2024-01-01T00:00:00Z",
    "is_new": false,
    "is_joined": true,
    "has_notifications": false,
    "exercises": [
      {
        "slug": "bob",
        "title": "Bob",
        "difficulty": "easy",
        "blurb": "Exercise bob on Exercism.",
        "is_unlocked": true,
        "is_recommended": false
      }
    ]
  }
}
'
`;

snapshot[`tests > cli > --json 10`] = `[]`;

snapshot[`tests > cli > --json 11`] = `
'
{
  "exercise": {
    "slug": "bob",
    "title": "Bob",
    "difficulty": "easy",
    "blurb": "Exercise bob on Exercism.",
    "is_unlocked": true,
    "is_recommended": false
  }
}
'
`;

snapshot[`tests > cli > --json 12`] = `[]`;

snapshot[`tests > cli > --sync 1`] = `
"

"
`;

snapshot[`tests > cli > --sync 2`] = `[]`;

snapshot[`tests > cli > --sync 3`] = `
"

"
`;

snapshot[`tests > cli > --sync 4`] = `[]`;

snapshot[`tests > cli > --sync 5`] = `
"

"
`;

snapshot[`tests > cli > --sync 6`] = `[]`;

snapshot[`tests > cli > --sync 7`] = `
"

"
`;

snapshot[`tests > cli > --sync 8`] = `[]`;

snapshot[`tests > cli > --sync 9`] = `
"

"
`;

snapshot[`tests > cli > --sync 10`] = `[]`;

snapshot[`tests > cli > --sync 11`] = `
"

"
`;

snapshot[`tests > cli > --sync 12`] = `[]`;

snapshot[`tests > cli > --sync --quiet 1`] = `
"

"
`;

snapshot[`tests > cli > --sync --quiet 2`] = `[]`;

snapshot[`tests > cli > --sync --json 1`] = `
'
{
  "profile": {
    "handle": "test-handle",
    "total_reputation": 42
  },
  "tracks": [
    {
      "slug": "python",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/python.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": false,
      "has_notifications": false
    },
    {
      "slug": "rust",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/rust.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    },
    {
      "slug": "typescript",
      "course": true,
      "icon_url": "https://assets.exercism.org/tracks/typescript.svg",
      "tags": [
        "Windows",
        "macOS",
        "Linux"
      ],
      "last_touched_at": "2024-01-01T00:00:00Z",
      "is_new": false,
      "is_joined": true,
      "has_notifications": false
    }
  ]
}
'
`;

snapshot[`tests > cli > --sync --json 2`] = `[]`;

snapshot[`tests > cli > --open 1`] = `
"

"
`;

snapshot[`tests > cli > --open 2`] = `
[
  'open("http://0.0.0.0:PORT/tracks")',
  'open("http://0.0.0.0:PORT/profiles/test-handle")',
]
`;

snapshot[`tests > cli > --open 3`] = `
"

"
`;

snapshot[`tests > cli > --open 4`] = `
[
  'open("http://0.0.0.0:PORT/profiles/test-handle")',
]
`;

snapshot[`tests > cli > --open 5`] = `
"

"
`;

snapshot[`tests > cli > --open 6`] = `
[
  'open("http://0.0.0.0:PORT/tracks/rust")',
  'open("http://0.0.0.0:PORT/tracks/typescript")',
]
`;

snapshot[`tests > cli > --open 7`] = `
"

"
`;

snapshot[`tests > cli > --open 8`] = `
[
  'open("http://0.0.0.0:PORT/tracks")',
]
`;

snapshot[`tests > cli > --open 9`] = `
"

"
`;

snapshot[`tests > cli > --open 10`] = `
[
  'open("http://0.0.0.0:PORT/tracks/typescript")',
]
`;

snapshot[`tests > cli > --open 11`] = `
"

"
`;

snapshot[`tests > cli > --open 12`] = `
[
  'open("http://0.0.0.0:PORT/tracks/typescript/exercises/bob")',
]
`;

snapshot[`tests > cli > --open 13`] = `
"

"
`;

snapshot[`tests > cli > --open 14`] = `
[
  'open("http://0.0.0.0:PORT/tracks/typescript/exercises/bob")',
]
`;

snapshot[`tests > cli > help 1`] = `
"
Usage: exercism [options] [command]

Manage Exercism tracks and exercise solutions.

Options:
  -V, --version         output the version number
  -q, --quiet           enable quiet mode
  -v, --verbose         enable verbose mode
  --open                open related Exercism pages on browser
  -h, --help            display help for command

Commands:
  profile               show profile
  tracks [options]      list tracks
  rust [options]        manage rust exercises
  typescript [options]  manage typescript exercises

"
`;

snapshot[`tests > cli > help 2`] = `[]`;

snapshot[`tests > cli > help 3`] = `
"
Usage: exercism profile [options]

Show profile information.

Options:
  -h, --help     display help for command

Global Options:
  -V, --version  output the version number
  -q, --quiet    enable quiet mode
  -v, --verbose  enable verbose mode
  --open         open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 4`] = `[]`;

snapshot[`tests > cli > help 5`] = `
"
Usage: exercism tracks [options]

Find tracks matching given filters.

Options:
  -e, --track <slug>  only specific tracks
  --all               all tracks, joined or not
  --completed         only completed tracks
  -h, --help          display help for command

Global Options:
  -V, --version       output the version number
  -q, --quiet         enable quiet mode
  -v, --verbose       enable verbose mode
  --open              open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 6`] = `[]`;

snapshot[`tests > cli > help 7`] = `
"
Usage: exercism typescript [options] [command]

Find typescript exercises matching given filters, and perform operations on
them.

Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -h, --help             display help for command

Global Options:
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

Commands:
  start                  start exercise
  code                   open solution code on IDE
  format [options]       format solution
  lint [options]         lint solution
  test [options]         run unittests
  diff [options]         compare solution
  download [options]     download solution
  submit [options]       submit solution
  complete               complete exercise
  publish                publish solution
  update                 update solution

"
`;

snapshot[`tests > cli > help 8`] = `[]`;

snapshot[`tests > cli > help 9`] = `
"
Usage: exercism typescript bob [options] [command]

Perform operations on Bob exercise of typescript track.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

Commands:
  start                  start exercise
  code                   open solution code on IDE
  format [options]       format solution
  lint [options]         lint solution
  test [options]         run unittests
  diff [options]         compare solution
  download [options]     download solution
  submit [options]       submit solution
  complete               complete exercise
  publish                publish solution
  update                 update solution

"
`;

snapshot[`tests > cli > help 10`] = `[]`;

snapshot[`tests > cli > help 11`] = `
"
Usage: exercism typescript bob start [options]

Start exercises.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 12`] = `[]`;

snapshot[`tests > cli > help 13`] = `
"
Usage: exercism typescript bob code [options]

Open solution files on VSCode.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 14`] = `[]`;

snapshot[`tests > cli > help 15`] = `
"
Usage: exercism typescript bob format [options]

Format solution files with the code formatters of the track.

Options:
  --code                 open failing exercises on IDE
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 16`] = `[]`;

snapshot[`tests > cli > help 17`] = `
"
Usage: exercism typescript bob lint [options]

Check solution files with the linter(s) of the track.

Options:
  --code                 open failing exercises on IDE
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 18`] = `[]`;

snapshot[`tests > cli > help 19`] = `
"
Usage: exercism typescript bob test [options]

Run unittests locally with the framework of the runner.

Options:
  --code                 open failing exercises on IDE
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 20`] = `[]`;

snapshot[`tests > cli > help 21`] = `
"
Usage: exercism typescript bob diff [options]

Compare solution files to latest submitted iteration.

Options:
  --code                 open differing files on IDE
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 22`] = `[]`;

snapshot[`tests > cli > help 23`] = `
"
Usage: exercism typescript bob download [options]

Download solution files from last submitted iteration.

Options:
  --force                force download, overwriting existing files
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 24`] = `[]`;

snapshot[`tests > cli > help 25`] = `
"
Usage: exercism typescript bob submit [options]

Submit solution files to Exercism.

Options:
  --force                force submit, skipping format, lint, and test checks
  --complete             complete solution if all tests are passing
  --publish              publish solution if all tests are passing
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 26`] = `[]`;

snapshot[`tests > cli > help 27`] = `
"
Usage: exercism typescript bob complete [options]

Complete exercise, submitting if necessary.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 28`] = `[]`;

snapshot[`tests > cli > help 29`] = `
"
Usage: exercism typescript bob publish [options]

Publish solution, submitting if necessary.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 30`] = `[]`;

snapshot[`tests > cli > help 31`] = `
"
Usage: exercism typescript bob update [options]

Update solution ot the latest version of the exercise.

Options:
  -h, --help             display help for command

Global Options:
  -e, --exercise <slug>  only specific exercises
  --all                  all exercises, locked or unlocked
  --locked               only locked exercises
  --easy                 only easy exercises
  --medium               only medium exercises
  --hard                 only hard exercises
  --new                  only new exercises
  --started              only started but incomplete exercises
  --completed            only completed exercises
  --published            only exercises with published last iteration
  --draft                only exercises with an unpublished last iteration
  --passing              only exercises with passing iterations
  --failing              only exercises with failing iterations
  --feedback             only exercises with automated feedback
  --outdated             only exercises on previous versions
  --starred              only exercises with starred solutions
  --commented            only exercises with commented solutions
  -V, --version          output the version number
  -q, --quiet            enable quiet mode
  -v, --verbose          enable verbose mode
  --open                 open related Exercism pages on browser

"
`;

snapshot[`tests > cli > help 32`] = `[]`;

snapshot[`tests > cli > invalid 1`] = `
"
error: unknown option '--unknown'

"
`;

snapshot[`tests > cli > invalid 2`] = `[]`;

snapshot[`tests > cli > invalid 3`] = `
"
error: too many arguments. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 4`] = `[]`;

snapshot[`tests > cli > invalid 5`] = `
"
error: too many arguments for 'profile'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 6`] = `[]`;

snapshot[`tests > cli > invalid 7`] = `
"
error: too many arguments for 'tracks'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 8`] = `[]`;

snapshot[`tests > cli > invalid 9`] = `
"
error: too many arguments for 'typescript'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 10`] = `[]`;

snapshot[`tests > cli > invalid 11`] = `
"
error: too many arguments for 'bob'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 12`] = `[]`;

snapshot[`tests > cli > invalid 13`] = `
"
error: too many arguments for 'start'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 14`] = `[]`;

snapshot[`tests > cli > invalid 15`] = `
"
error: too many arguments for 'code'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 16`] = `[]`;

snapshot[`tests > cli > invalid 17`] = `
"
error: too many arguments for 'format'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 18`] = `[]`;

snapshot[`tests > cli > invalid 19`] = `
"
error: too many arguments for 'lint'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 20`] = `[]`;

snapshot[`tests > cli > invalid 21`] = `
"
error: too many arguments for 'test'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 22`] = `[]`;

snapshot[`tests > cli > invalid 23`] = `
"
error: too many arguments for 'diff'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 24`] = `[]`;

snapshot[`tests > cli > invalid 25`] = `
"
error: too many arguments for 'download'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 26`] = `[]`;

snapshot[`tests > cli > invalid 27`] = `
"
error: too many arguments for 'submit'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 28`] = `[]`;

snapshot[`tests > cli > invalid 29`] = `
"
error: too many arguments for 'complete'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 30`] = `[]`;

snapshot[`tests > cli > invalid 31`] = `
"
error: too many arguments for 'publish'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 32`] = `[]`;

snapshot[`tests > cli > invalid 33`] = `
"
error: too many arguments for 'update'. Expected 0 arguments but got 1.

"
`;

snapshot[`tests > cli > invalid 34`] = `[]`;
